# Corpus2DNALLM

./: .gitignore  1_Prepare_corpus.py  3_generate_tokenizer_config.py  LICENSE  README.md  pyproject.toml
scr/: 2_generate_BPE_tokenizer.py
src/corpus2dnallm/: 0_Prepare_GenomeSizeFile.py  cli.py  config_gen.py  corpus_prep.py  genome_size.py  tokenizer_train.py
